--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .App-header {
@@ -8,9 +8,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 50px;
 }
 
 .App-link {
@@ -18,4 +19,16 @@
 }
 ul {
   list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin: 20px 10px;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.list-button {
+  margin-left: 20px;
 }
