--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,8 @@ ul {
 
 li {
   margin: 20px 10px;
-  max-width: 500px;
+  max-width: 700px;
+  /*min-width: 300px;*/
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -32,3 +33,10 @@ li {
 .list-button {
   margin-left: 20px;
 }
+
+/*@media  only screen and (){*/
+  /*li {*/
+    /*min-width: ;*/
+    /*max-width: ;*/
+  /*}*/
+/*}*/
